# sea-orm-adapter

./: .rustfmt.toml  Cargo.toml
src/: adapter.rs  entity.rs  migration.rs
