[package]
description = "Sea ORM adapter for casbin-rs"
edition = "2024"
homepage = "https://github.com/ZihanType/sea-orm-adapter"
include = ["Cargo.toml", "src/**/*"]
keywords = ["adapter", "casbin", "sea-orm"]
license = "MIT/Apache-2.0"
name = "sea-orm-adapter"
repository = "https://github.com/ZihanType/sea-orm-adapter"
version = "0.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1", default-features = false }
casbin = { version = "2", default-features = false }
sea-orm = { version = "2.0.0-rc.38", default-features = false, features = [
  "entity-registry",
  "macros",
  "schema-sync",
] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }

[features]
default = ["postgres", "runtime-tokio-rustls"]

#databases
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

# async runtime
# async-std
runtime-async-std-native-tls = [
  "casbin/runtime-async-std",
  "sea-orm/runtime-async-std-native-tls",
]
runtime-async-std-rustls = [
  "casbin/runtime-async-std",
  "sea-orm/runtime-async-std-rustls",
]
# tokio
runtime-tokio-native-tls = [
  "casbin/runtime-tokio",
  "sea-orm/runtime-tokio-native-tls",
]
runtime-tokio-rustls = ["casbin/runtime-tokio", "sea-orm/runtime-tokio-rustls"]
